--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </h3>
 
     <div>
-        Và nếu sảy ra sự cố không vào được trang web thì bạn hãy quan sát thật kỹ phía dưới trang web đấy
+        Và nếu sảy ra sự cố không vào được trang web thì bạn hãy quan sát thật kỹ phía dưới cùng trang web nhé
     </div>
 
     <p>
@@ -221,6 +221,20 @@
     <div id="L">
         *Lưu ý: sau khi đọc xong các thông tin trên, bạn thích nghĩ thế nào thì nghĩ. Nhưng có thể sự thật không như bạn nghĩ đâu :)))
     </div>
-    <h6>Bạn bị lừa rồi!</h6>
+    <p class="B1"> Bạn bị lừa rồi! </p>
+    <h3 class="W">Bạn bị lừa rồi</h3>
+
+    <h3>Xin chào, bạn hãy bấm vào Hãy thử bấm vào đây</h3>
+    <p>*Bôi đen là sức mạnh, bôi đen là tri thức*</p>
+
+    <button class="BT" type="button" onclick="document.write('Xin chào, sao bạn lại tin người đến thế. Người ta bảo hãy thử bấm vào đây xong rồi bấm thật luôn. Chẹp chẹp. Nếu bố bạn ở đây, bố bạn sẽ nói: Đồ ng█, đồ ăn h██, cút m█ m█ đi!')">Hãy thử bấm vào đây</button><br>
+    <h5 class="W">
+        Nếu bạn đọc được dòng chữ này, bạn khá may mắn hoặc giỏi đấy, để tôi tiết lộ nhé. Bấm vào đâu thì cũng sẽ bị chửi là Đồ ng█, đồ ăn h██, cút m█ m█ đi! kể cả khi bạn đọc được dòng này!
+    </h5>
+    <button class="BT" type="button" onclick="document.write('Xin chào, sao bạn lại bấm vào đây. Người ta bảo hãy thử bấm vào đây mà, sao lại bấm vào hãy thử bấm vào đây 2. Chẹp chẹp. Nếu bố bạn ở đây, bố bạn sẽ nói: Đồ ng█, đồ ăn h██, cút m█ m█ đi!')">Hãy thử bấm vào đây 2</button><br>
+    <h5 class="W">
+        Nếu bạn bấm vào Đừng bấm vào đây, bạn rất là ăn hại đấy.  Chẹp chẹp. Nếu bố bạn ở đây, bố bạn sẽ nói: Đồ ng█, đồ ăn h██, cút m█ m█ đi! 
+    </h5>
+    <button class="BT" type="button" onclick="document.write('Xin chào, sao bạn lại bấm vào đây. Người ta bảo là Đừng bấm vào đây rồi mà, sao lại bấm vào Đừng bấm vào đây. Chẹp chẹp. Nếu bố bạn ở đây, bố bạn sẽ nói: Đồ ng█, đồ ăn h██, cút m█ m█ đi!')">Đừng bấm vào đây</button><br>
 </body>
 </html>
