--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
             <td>Đàn Piano</td>
             <td>Không có</td>
         </tr>
+        <tr>
+            <td>13</td>
+            <td>Nguyễn Bảo Liên</td>
+            <td>5A4</td>
+            <td>24/06/2022</td>
+            <td>Bảo Bảo</td>
+            <td>Lười</td>
+            <td>Vàng</td>
+            <td>Chơi game</td>
+            <td>Bị khịa</td>
+        </tr>
     </table>
     <span>Như đã nói, tôi (chủ trang web) sẽ để lại SĐT ở đây. Đây là số điện thoại của tôi</span>
     <span>████ ███ ███</span>
